# jacob

./: .gitignore  README.md  pyproject.toml  todo.md
jacob/: __init__.py  cli.py  crypto.py  encoding.py  enumerations.py  excel.py  filesystem.py  logging.py  text.py  types.py
jacob/algorithms/: grouping.py  procedural.py  trees.py
jacob/datetime/: constants.py  formatting.py  timezones.py  timing.py
tests/: formatting_utils.py  logging_utils.py
