[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jacob"
authors = [{name = "Jacob Jewett", email = "jacoblj3333@gmail.com"}]
dynamic = ["version", "description"]

[project.urls]
Home = "https://instancegaming.net"

[project.optional-dependencies]
loguru = ["loguru"]
