[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jacob"
version = "0.0.2"
description = "Python boilerplate and utilites I end up using in pretty much all of my projects."
authors = ["Jacob Jewett <jacoblj3333@gmail.com>"]
packages = [{ include = "jacob" }]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.7.3"

[tool.poetry.group.loguru]
optional = true

[tool.poetry.group.loguru.dependencies]
loguru = "0.7.3"